--- a/projet.html
+++ b/projet.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Mon premier repository</h1>
-<p>Grace à openclassroom, j'apprends à faire des commit et aussi des remotes avec github</p>
+<p>Grace à openclassroom, j'apprends à faire des <strong>commit</strong> et aussi des remotes avec github</p>
 </body>
 </html>
