--- a/projet.html
+++ b/projet.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Mon premier repository</h1>
 <p>Grace à openclassroom, j'apprends à faire des <strong>commit</strong> et aussi des remotes avec github</p>
+<h2>Suite du programme</h2>
 </body>
 </html>
